# ocr

./: .dockerignore  .gitignore  README.md  pyproject.toml
benchmarks/: agreement_matrix.py  bench_attention.py  bench_throughput.py  bench_vllm.py  profile_stages.py  token_budget.py
benchmarks/synth/: __init__.py  docs.py  (+6 more)
demo/: __init__.py  agent_api.py  bench.py  db.py  docstore.py  run_task.py  server.py  worker.py  worker_standalone.py
docker/: Dockerfile  Dockerfile.bench  Dockerfile.vllm  build.sh  compose.server.yml  run.sh  run_demo.sh  run_worker2.sh
docs/: architecture.md
reports/: bench_multi_page_1gpu.json  bench_multi_page_2gpu.json  bench_multi_page_2gpu_b2.json  bench_single_page_1gpu.json  benchmark_2x4090_2026-07-15.md  perf-findings.md  validation_2026-07-12.json
scripts/: check_local_env.py  deploy_server.sh  download_checkpoint.sh  generate_synthetic.py  prepare_checkpoint.py  run_agreement_matrix.sh  run_bench_2x4090.sh  run_local.sh  run_local_vllm.sh  run_synth_edge.sh  setup_local.sh  test_dots_mocr_cpu.sh  test_dots_mocr_gpu.sh  test_dots_mocr_svg_cpu.sh  test_dots_mocr_svg_gpu.sh
tests/: conftest.py  test_cli_parser.py  test_demo_db.py  test_demo_server.py  test_demo_worker.py  test_doc_utils.py  test_docstore.py  test_format_transformer.py  test_generation_stats.py  test_gpu_integration.py  test_image_utils.py  test_layout_utils.py  test_output_cleaner.py  test_svg_utils.py  test_synth_scoring.py  test_table_formula.py  test_transformers_patch.py  test_transformers_patch_vision.py  test_vision_flex_attention.py  test_vllm_parser.py
(+37 files in other folders)
